--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "date-fns": "^2.28.0",
     "expiry-map": "^2.0.0",
     "fathom-client": "^3.4.1",
+    "fs": "^0.0.1-security",
     "got": "^12.0.3",
     "isomorphic-unfetch": "^3.1.0",
     "lodash.omit": "^4.5.0",
@@ -44,6 +45,7 @@
     "notion-utils": "^6.15.6",
     "p-map": "^5.3.0",
     "p-memoize": "^6.0.1",
+    "path": "^0.12.7",
     "posthog-js": "^1.20.2",
     "raf": "^3.4.1",
     "random": "^4.1.0",
